<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/horizontal_value_and_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <include
        layout="@layout/payment_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/screen_spacer"
        android:layout_marginRight="@dimen/screen_spacer"
        android:layout_marginBottom="@dimen/screen_spacer"
        android:background="@drawable/border_shape"
        android:orientation="horizontal"
        android:padding="@dimen/screen_spacer"
        android:weightSum="2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/categories_text"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/categories_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/expense_categories" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/remove_expense_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_delete"
            android:tint="@color/gray_regular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/delete_expense_text"
            android:textAllCaps="true"
            android:textColor="@color/gray_regular"
            android:textSize="20sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add_expense_button"
            style="@style/AppTheme.Button"
            android:layout_gravity="bottom"
            android:text="@string/edit_expense_text" />
    </FrameLayout>

</LinearLayout>
